feat(location): theme search locations screen

--- a/app/src/main/res/layout/fragment_location_search.xml
+++ b/app/src/main/res/layout/fragment_location_search.xml
@@ -8,7 +8,9 @@
     <androidx.appcompat.widget.SearchView
         android:id="@+id/locations_search_view"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
+        android:background="@color/esoDarkerBlue"
+        android:paddingVertical="@dimen/containerPadding"
         app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,6 +20,7 @@
         android:id="@+id/locations_search_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/contentPadding"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/locations_search_view"
