--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/location_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/location_nav_host_fragment"
@@ -13,4 +17,4 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/location_nav_graph" />
 
-</LinearLayout>
+</FrameLayout>
